--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Replace pieces of your source using comment tags to identify the location.",
   "version": "0.1.0",
   "homepage": "https://github.com/javver/grunt-tagged-replace",
+  "main": "tasks/tagged-replace.js",
   "author": {
     "name": "Javier Cardona",
     "email": "javiercnsj@gmail.com"
@@ -14,12 +15,7 @@
   "bugs": {
     "url": "https://github.com/javver/grunt-tagged-replace/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/javver/grunt-tagged-replace/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -27,12 +23,22 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "coveralls": "^2.11.8",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "jit-grunt": "^0.10.0",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
+    "nyc": "^6.1.1",
+    "time-grunt": "^1.3.0"
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "chalk": "^1.1.1",
+    "tagged-replace": "^1.0.0"
+  }
 }
