--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "mocha",
+    "coverage": "nyc npm test && nyc report --reporter=html",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "devDependencies": {
     "coveralls": "^2.11.8",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt-mocha": "^0.4.15",
     "jit-grunt": "^0.10.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
