--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "grunt test --force",
     "coverage": "nyc npm test && nyc report --reporter=html",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
@@ -29,7 +29,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-mocha": "^0.4.15",
+    "grunt-mocha-test": "^0.12.7",
     "jit-grunt": "^0.10.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
