--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ node_js:
   - '4'
   - '0.12'
   - '0.10'
-after_success: npm run coveralls
+after_success:
+  - npm run coveralls
+before_script:
+  - npm install -g grunt-cli
